# twinsight

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-backend.yml  (+2 more)
backend/: .env.example  Dockerfile.api  Dockerfile.job  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ba78cdaa98bf_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  config.py.ci-touch  db.py  models.py  redis.py  schema.py
backend/app/jobs/: keep_alive.py  run_batch.py
backend/app/modules/alerts/: repository.py  router.py  service.py
backend/app/modules/auth/: repository.py  router.py  service.py
backend/app/modules/chips/: repository.py  router.py  service.py
backend/app/modules/jobs/: repository.py  router.py  service.py
backend/app/modules/screener/: repository.py  router.py  service.py
backend/app/modules/stocks/: provider.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/technical/: calculator.py  repository.py  router.py  service.py
backend/app/modules/watchlist/: repository.py  router.py  service.py
backend/app/providers/: __init__.py  fugle.py  twse.py  types.py  yfinance_client.py
backend/scripts/: pooler_stress_test.py
backend/tests/: test_calculator.py  test_health.py  test_providers.py  test_stocks_service.py
frontend/: .dockerignore  .env.example  .gitignore  .prettierrc.json  Dockerfile  README.md  next.config.ts  open-next.config.ts  package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
(+23 files in other folders)
